@@ -1,18 +1,45 @@
 package com.demo.app.service;
-// VULN: CWE-78 (HIGH) - OS Command Injection via unsanitized 'ip' parameter
+
 import org.springframework.stereotype.Service;
 import java.io.InputStreamReader;
 import java.io.BufferedReader;
+import java.util.regex.Pattern;
+
 @Service
 public class CommandService {
+    private static final Pattern IP_ADDRESS_PATTERN = Pattern.compile(
+        "^(?:[0-9]{1,3}\\.){3}[0-9]{1,3}$"
+    );
+
     public String checkServerHealth(String ip) {
         StringBuilder output = new StringBuilder();
         try {
-            Process p = Runtime.getRuntime().exec("ping -c 3 " + ip);
-            BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            String line;
-            while ((line = r.readLine()) != null) { output.append(line); }
-        } catch (Exception e) {}
+            if (!isValidIpAddress(ip)) {
+                throw new IllegalArgumentException("Invalid IP address format");
+            }
+
+            ProcessBuilder processBuilder = new ProcessBuilder("ping", "-c", "3", ip);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
+
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    output.append(line).append("\n");
+                }
+            }
+
+            int exitCode = process.waitFor();
+            if (exitCode != 0) {
+                throw new RuntimeException("Ping command failed with exit code: " + exitCode);
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Error while checking server health", e);
+        }
         return output.toString();
+    }
+
+    private boolean isValidIpAddress(String ip) {
+        return IP_ADDRESS_PATTERN.matcher(ip).matches();
     }
 }
